--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,8 +2,6 @@
     display: flex;
     justify-content: center;
     padding: 5px 3px;
-    position: fixed;
-    width: 100%;
 }
 .status-bar__column {
     width: 33%
@@ -23,4 +21,8 @@
 
 .status-bar__column .fa-battery-full {
     margin: 0px 5px;
+}
+
+.chat-screen > .status-bar {
+    position: fixed;
 }
